# Leptos-Chatting-Client

./: .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  \  dump.rdb  local.txt  mprime.pid  mysql-install.sh  prime.spl  prime.txt  tailwind.config.js
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/callback/: mod.rs
src/app/form_items/: mod.rs
src/app/pages/: mod.rs
src/app/pages/components/: mod.rs
src/app/pages/components/anciliary/: mod.rs
src/app/pages/components/avatar/: mod.rs
src/app/pages/components/modal/: mod.rs
src/app/pages/conversation/: mod.rs
src/app/pages/users/: mod.rs
src/app/pages/websocket/: mod.rs
src/app/validation/: mod.rs
src/database/: mod.rs
src/emailing/: mod.rs
src/entities/: conversation.rs  message.rs  seen_messages.rs  temp_users.rs  user_conversation.rs  users.rs
src/entities/old/: message.rs  mod.rs  prelude.rs  seen_messages.rs  user_conversation.rs  users.rs
src/migrator/: m20230521_000001_create_user_table.rs  m20230527_000002_create_temp_user_table.rs  m20230606_000003_create_conversation_table.rs  m20230606_000004_create_message_table.rs  m20230606_000005_create_user_conversation_table.rs  m20230606_000006_create_seen_messages_table.rs  mod.rs
src/server_function/: mod.rs
src/server_function/routes/: mod.rs
src/styles/: output.css
src/web_socket/: mod.rs  server.rs  session.rs
styles/: input.css
templates/: template.html
